# serializer version: 1
# name: test_audit
  '''
  Missing secrets:
  • argocd server.secretkey
  • gafaelfawr session-secret
  • gafaelfawr signing-key
  • gafaelfawr slack-webhook
  • nublado aws-credentials.ini
  • nublado butler-gcs-idf-creds.json
  • nublado butler-hmac-idf-creds.json
  • nublado postgres-credentials.txt
  • nublado proxy_token
  • portal ADMIN_PASSWORD
  
  Secrets that do not have their expected value:
  • gafaelfawr database-password
  • postgres nublado3_password
  
  Unknown secrets in Vault:
  • gafaelfawr cilogon
  • unknown some-secret
  
  '''
# ---
# name: test_audit_exclude
  '''
  Missing secrets:
  • gafaelfawr session-secret
  • gafaelfawr signing-key
  • gafaelfawr slack-webhook
  • nublado aws-credentials.ini
  • nublado butler-gcs-idf-creds.json
  • nublado butler-hmac-idf-creds.json
  • nublado postgres-credentials.txt
  • nublado proxy_token
  • portal ADMIN_PASSWORD
  
  Secrets that do not have their expected value:
  • gafaelfawr database-password
  • postgres nublado3_password
  
  Unknown secrets in Vault:
  • gafaelfawr cilogon
  
  '''
# ---
# name: test_audit_onepassword_missing
  '''
  Missing static secrets from 1Password:
  • argocd
  • gafaelfawr
  • mobu
  
  '''
# ---
# name: test_list
  '''
  argocd admin.password
  argocd admin.passwordMtime
  argocd admin.plaintext_password
  argocd dex.clientSecret
  argocd server.secretkey
  gafaelfawr bootstrap-token
  gafaelfawr cilogon-client-secret
  gafaelfawr database-password
  gafaelfawr ldap-password
  gafaelfawr redis-password
  gafaelfawr session-secret
  gafaelfawr signing-key
  gafaelfawr slack-webhook
  mobu ALERT_HOOK
  mobu app-alert-webhook
  nublado aws-credentials.ini
  nublado butler-gcs-idf-creds.json
  nublado butler-hmac-idf-creds.json
  nublado cryptkeeper_key
  nublado crypto_key
  nublado hub_db_password
  nublado postgres-credentials.txt
  nublado proxy_token
  nublado slack_webhook
  portal ADMIN_PASSWORD
  postgres nublado3_password
  postgres root_password
  
  '''
# ---
# name: test_list_path_search
  '''
  argocd admin.password
  argocd admin.passwordMtime
  argocd admin.plaintext_password
  argocd dex.clientSecret
  argocd server.secretkey
  gafaelfawr bootstrap-token
  gafaelfawr cilogon-client-secret
  gafaelfawr database-password
  gafaelfawr ldap-password
  gafaelfawr redis-password
  gafaelfawr session-secret
  gafaelfawr signing-key
  gafaelfawr slack-webhook
  mobu ALERT_HOOK
  mobu app-alert-webhook
  nublado aws-credentials.ini
  nublado butler-gcs-idf-creds.json
  nublado butler-hmac-idf-creds.json
  nublado cryptkeeper_key
  nublado crypto_key
  nublado hub_db_password
  nublado postgres-credentials.txt
  nublado proxy_token
  nublado slack_webhook
  portal ADMIN_PASSWORD
  postgres nublado3_password
  postgres root_password
  
  '''
# ---
# name: test_onepassword_secrets
  '''
  applications:
    argocd:
      dex.clientSecret:
        value: some-dex-secret
    gafaelfawr:
      github-client-secret:
        value: some-github-secret
    mobu:
      ALERT_HOOK:
        value: https://example.com/alert-hook
      app-alert-webhook:
        value: https://example.com/app-hook
  pull-secret:
    description: >-
      Pull secrets for Docker registries. Each key under registries is the
      name of a Docker registry that needs a pull secret. The value should
      have two keys, username and password, that provide the HTTP Basic Auth
      credentials for that registry.
    registries:
      ghcr.io:
        password: some-github-token
        username: token
      hub.docker.com:
        password: docker-password
        username: sqrereadonly
  vault-write-token: a-vault-write-token
  
  '''
# ---
# name: test_static_template
  '''
  applications:
    argocd:
      dex.clientSecret:
        description: >-
          OAuth 2 or OpenID Connect client secret, used to authenticate to
          GitHub or Google as part of the authentication flow. This secret
          can be changed at any time.
        value: null
    gafaelfawr:
      cilogon-client-secret:
        description: >-
          Secret used to authenticate to CILogon as part of the OpenID Connect
          login protocol to obtain an identity token for the user. This secret
          can be changed at any time.
        value: null
      database-password:
        description: >-
          Password used to authenticate to the PostgreSQL database used to
          store Gafaelfawr data. This password may be changed at any time.
        value: null
      ldap-password:
        description: >-
          Password to authenticate to the LDAP server via simple binds to
          retrieve user and group information. This password can be changed
          at any time.
        value: null
    mobu:
      ALERT_HOOK:
        description: >-
          Slack web hook to which mobu should report failures and daily status.
        value: null
        warning: >-
          If you store this secret in a 1Password item, encode it with base64
          first.
      app-alert-webhook:
        description: >-
          Slack web hook to which to post internal application alerts. This
          secret is not used directly by mobu, but is copied from here to
          all of the applications that report internal problems to Slack.
          It should normally be separate from mobu's own web hook, since the
          separate identities attached to the messages helps make the type
          of mesasge clearer, but the same web hook as mobu's own alerts can
          be used in a pinch.
        value: null
    nublado:
      aws-credentials.ini:
        description: >-
          Google Cloud Storage credentials to the Butler data store, formatted
          using AWS syntax for use with boto.
        value: null
      butler-gcs-idf-creds.json:
        description: >-
          Google Cloud Storage credentials to the Butler data store in the
          native Google syntax, containing the private asymmetric key.
        value: null
      butler-hmac-idf-creds.json:
        description: >-
          Google Cloud Storage credentials to the Butler data store in the
          private key syntax used for HMACs.
        value: null
      postgres-credentials.txt:
        description: >-
          PostgreSQL credentials in its pgpass format for the Butler database.
        value: null
  pull-secret:
    description: >-
      Pull secrets for Docker registries. Each key under registries is the
      name of a Docker registry that needs a pull secret. The value should
      have two keys, username and password, that provide the HTTP Basic Auth
      credentials for that registry.
    registries: {}
  vault-write-token: null
  
  '''
# ---
# name: test_sync
  '''
  Updated Vault secret for argocd server.secretkey
  Updated Vault secret for gafaelfawr database-password
  Updated Vault secret for gafaelfawr session-secret
  Updated Vault secret for gafaelfawr signing-key
  Updated Vault secret for gafaelfawr slack-webhook
  Updated Vault secret for nublado aws-credentials.ini
  Updated Vault secret for nublado butler-gcs-idf-creds.json
  Updated Vault secret for nublado butler-hmac-idf-creds.json
  Updated Vault secret for nublado postgres-credentials.txt
  Updated Vault secret for nublado proxy_token
  Created Vault secret for portal
  Updated Vault secret for postgres nublado3_password
  
  '''
# ---
# name: test_sync.1
  '''
  Deleted Vault secret for gafaelfawr cilogon
  Deleted Vault secret for unknown
  
  '''
# ---
# name: test_sync_exclude
  '''
  Updated Vault secret for gafaelfawr database-password
  Updated Vault secret for gafaelfawr session-secret
  Updated Vault secret for gafaelfawr signing-key
  Updated Vault secret for gafaelfawr slack-webhook
  Updated Vault secret for nublado aws-credentials.ini
  Updated Vault secret for nublado butler-gcs-idf-creds.json
  Updated Vault secret for nublado butler-hmac-idf-creds.json
  Updated Vault secret for nublado postgres-credentials.txt
  Updated Vault secret for nublado proxy_token
  Updated Vault secret for postgres nublado3_password
  
  '''
# ---
# name: test_sync_modify_delete
  '''
  Updated Vault secret for gafaelfawr database-password
  Updated Vault secret for gafaelfawr session-secret
  Updated Vault secret for gafaelfawr signing-key
  Updated Vault secret for gafaelfawr slack-webhook
  Deleted Vault secret for gafaelfawr cilogon
  
  '''
# ---
# name: test_sync_onepassword
  '''
  Created Vault secret for argocd
  Created Vault secret for gafaelfawr
  Created Vault secret for mobu
  Created Vault secret for postgres
  Created Vault secret for pull-secret
  
  '''
# ---
# name: test_sync_regenerate
  '''
  Updated Vault secret for argocd admin.plaintext_password
  Updated Vault secret for argocd server.secretkey
  Updated Vault secret for argocd admin.password
  Updated Vault secret for argocd admin.passwordMtime
  Updated Vault secret for gafaelfawr bootstrap-token
  Updated Vault secret for gafaelfawr database-password
  Updated Vault secret for gafaelfawr redis-password
  Updated Vault secret for gafaelfawr session-secret
  Updated Vault secret for gafaelfawr signing-key
  Updated Vault secret for gafaelfawr slack-webhook
  Updated Vault secret for nublado aws-credentials.ini
  Updated Vault secret for nublado butler-gcs-idf-creds.json
  Updated Vault secret for nublado butler-hmac-idf-creds.json
  Updated Vault secret for nublado cryptkeeper_key
  Updated Vault secret for nublado crypto_key
  Updated Vault secret for nublado hub_db_password
  Updated Vault secret for nublado postgres-credentials.txt
  Updated Vault secret for nublado proxy_token
  Created Vault secret for portal
  Updated Vault secret for postgres nublado3_password
  Updated Vault secret for postgres root_password
  
  '''
# ---
